# aegis-hv

./: ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  README.md  aegis-hv.service
aegis-common/src/: codec.rs  identity.rs  lib.rs
aegis-daemon/: Cargo.toml
aegis-daemon/src/: analysis.rs  attestation.rs  db.rs  enforcement.rs  errors.rs  ipc.rs  isolation.rs  lib.rs  main.rs  monitor.rs  policy.rs  response.rs  sandbox.rs  tests.rs
aegis-daemon/src/aegis-daemon/src/: response.rs
aegis-ebpf/src/: main.rs
aegis-ipc/src/: identity.rs  sign.rs
aegis-tui/: Cargo.toml
aegis-tui/src/: main.rs  ui.rs
aegis-web/: Cargo.toml
aegis-web/src/: main.rs
crates/aegis-ipc/src/: sign.rs
crates/aegis-monitor/: monitor.rs
crates/aegis-supervisor/: attestation.rs  ipc.rs  ipc_control.rs  isolation.rs  replay_protection.rs  verify.rs
crates/aegis-supervisor/src/: attestation.rs  auth.rs  backup.rs  db.rs  identity_registry.rs  key_manager.rs  key_store.rs  main.rs  quorum.rs  replicator.rs  secure_registry.rs  signer.rs  tpm.rs  tpm_attestation.rs  tpm_signer.rs
etc/systemd/system/: aegis-hv.service
policies/: default.yaml
remote-ledger/: server.rs  store.rs  verify.rs
scripts/: install.sh
