[workspace]
members = [
    "aegis-common",
    "aegis-daemon",
    "aegis-tui",
    "aegis-ebpf",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
aegis-common = { path = "./aegis-common" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
