[dependencies]
aegis-common = { path = "../aegis-common" }
interprocess = "2.4.0" # Best-in-class 2026 IPC crate
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
[package]
name = "aegis-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# eBPF Loading & Management
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.1"

# Database & Logic
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde_yaml = "0.9"
bytes = "1.5"

# Internal modules
[lib]
path = "src/lib.rs"
