[package]
name = "aegis-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared project protocol
aegis-common = { path = "../aegis-common" }

# Web Framework & Async
axum = "0.7"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# mTLS & HTTPS Support
# Using axum-server provides a clean way to handle rustls handshakes
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"

# Middleware (CORS)
tower-http = { version = "0.5", features = ["cors"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
